# token_compression_research

./: .gitignore  .gitmodules  README.md  __init__.py  environment.yml  pyproject.toml  requirements.txt
eval/: coco_vqa_eval.py  eval.py  scienceQA_eval.py
experiments/e1/: e1a.py  environment.yml  requirements.txt  run_e1.py
experiments/llava/eval/: textVQA_eval.py
experiments/llava/finetune/: scienceQA_ft.py  textVQA_ft.py
finetune/: scienceQA_ft.py
fna/: fna_models.py
models/: __init__.py
models/TiTok/: TiTok.py
models/VisionZip/: VisionZip.py
models/fna/: __init__.py  attention.py
toco/: __init__.py  pruning.py
